[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/Menus/Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Engine/Font/normal/normal_24px.tres" type="DynamicFont" id=2]
[ext_resource path="res://GUI/Theme/Button/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player_MM.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tileset/Tilesets/FG.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tileset/Tilesets/BG.tscn" type="PackedScene" id=6]
[ext_resource path="res://Engine/Font/normal/normal_8px.tres" type="DynamicFont" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 52 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 7.0
margin_top = 20.0
margin_right = 47.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "Title"

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 19.0
margin_top = 79.0
margin_right = 92.0
margin_bottom = -35.0
alignment = 1

[node name="NewGame" parent="Buttons" instance=ExtResource( 3 )]
margin_right = 73.0
margin_bottom = 19.0
size_flags_vertical = 3
text = "New Game"

[node name="LoadGame" parent="Buttons" instance=ExtResource( 3 )]
margin_top = 23.0
margin_right = 73.0
margin_bottom = 42.0
size_flags_vertical = 3
disabled = true
text = "Load Save"

[node name="Options" parent="Buttons" instance=ExtResource( 3 )]
margin_top = 46.0
margin_right = 73.0
margin_bottom = 65.0
size_flags_vertical = 3
text = "Options"

[node name="Credits" parent="Buttons" instance=ExtResource( 3 )]
margin_top = 69.0
margin_right = 73.0
margin_bottom = 88.0
size_flags_vertical = 3
text = "Credits"

[node name="Exit" parent="Buttons" instance=ExtResource( 3 )]
margin_top = 92.0
margin_right = 73.0
margin_bottom = 111.0
size_flags_vertical = 3
text = "Exit"

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 188, 164 )

[node name="Bottom" type="Area2D" parent="."]
position = Vector2( 399, 143 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2( 12, -21 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="Bottom"]
position = Vector2( -9, 6 )

[node name="Top" type="Area2D" parent="."]
position = Vector2( -48, 44 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2( 18, 0 )
shape = SubResource( 1 )

[node name="Position2D2" type="Position2D" parent="Top"]
position = Vector2( 40, 7 )

[node name="Tempel_AutoTiles_FG" parent="." instance=ExtResource( 5 )]
z_index = -1
tile_data = PoolIntArray( 65530, 5, 0, 65531, 5, 0, 65532, 5, 0, 65533, 5, 0, 65534, 5, 0, 65535, 5, 0, 0, 3, 0, 1, 3, 4, 2, 3, 5, 3, 3, 2, 4, 3, 4, 5, 3, 3, 6, 3, 5, 7, 3, 5, 8, 3, 2, 9, 3, 1, 10, 3, 4, 11, 3, 1, 12, 3, 4, 13, 3, 3, 14, 3, 3, 15, 3, 4, 16, 3, 1, 17, 3, 2, 18, 3, 2, 19, 3, 5, 20, 3, 2, 21, 3, 5, 22, 3, 5, 23, 3, 6, 131065, 5, 0, 65551, 5, 0, 65552, 1, 0, 65553, 1, 1, 65554, 1, 1, 65555, 1, 1, 65556, 1, 2, 65557, 0, 0, 65558, 0, 1, 65559, 0, 2, 65560, 1, 0, 65561, 1, 1, 65562, 1, 1, 65563, 1, 1, 65564, 1, 1, 65565, 1, 2, 65566, 0, 0, 65567, 0, 2, 196601, 5, 0, 131088, 1, 131072, 131089, 1, 131073, 131090, 1, 131073, 131091, 1, 131073, 131092, 1, 131074, 131093, 0, 65536, 131094, 0, 65537, 131095, 0, 65538, 131096, 1, 65536, 131097, 1, 65537, 131098, 1, 65537, 131099, 1, 65537, 131100, 1, 65537, 131101, 1, 65538, 131102, 0, 65536, 131103, 0, 65538, 262137, 5, 0, 196629, 0, 65536, 196630, 0, 65537, 196631, 0, 65538, 196632, 1, 65536, 196633, 1, 65537, 196634, 1, 65537, 196635, 1, 65537, 196636, 1, 65537, 196637, 1, 65538, 196638, 0, 65536, 196639, 0, 65538, 327673, 5, 0, 327674, 1, 0, 327675, 1, 1, 327676, 1, 1, 327677, 1, 1, 327678, 1, 1, 327679, 1, 2, 262144, 0, 0, 262145, 0, 1, 262146, 0, 1, 262147, 0, 1, 262148, 0, 1, 262149, 0, 1, 262150, 0, 2, 262165, 0, 131072, 262166, 0, 131073, 262167, 0, 131074, 262168, 1, 131072, 262169, 1, 131073, 262170, 1, 131073, 262171, 1, 131073, 262172, 1, 131073, 262173, 1, 131074, 262174, 0, 131072, 262175, 0, 131074, 393210, 1, 65536, 393211, 1, 65537, 393212, 1, 65537, 393213, 1, 65537, 393214, 1, 65537, 393215, 1, 65538, 327680, 0, 65536, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65538, 327709, 1, 0, 327710, 1, 1, 327711, 1, 2, 458746, 1, 65536, 458747, 1, 65537, 458748, 1, 65537, 458749, 1, 65537, 458750, 1, 65537, 458751, 1, 65538, 393216, 0, 65536, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65538, 393245, 1, 65536, 393246, 1, 65537, 393247, 1, 65538, 524282, 1, 65536, 524283, 1, 65537, 524284, 1, 65537, 524285, 1, 65537, 524286, 1, 65537, 524287, 1, 65538, 458752, 0, 65536, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65538, 458781, 1, 65536, 458782, 1, 65537, 458783, 1, 65538, 589818, 1, 65536, 589819, 1, 65537, 589820, 1, 65537, 589821, 1, 65537, 589822, 1, 65537, 589823, 1, 65538, 524288, 0, 65536, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65538, 524317, 1, 65536, 524318, 1, 65537, 524319, 1, 65538, 655354, 1, 65536, 655355, 1, 65537, 655356, 1, 65537, 655357, 1, 65537, 655358, 1, 65537, 655359, 1, 65538, 589824, 0, 65536, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65538, 589853, 1, 65536, 589854, 1, 65537, 589855, 1, 65538, 720890, 1, 65536, 720891, 1, 65537, 720892, 1, 65537, 720893, 1, 65537, 720894, 1, 65537, 720895, 1, 65538, 655360, 0, 65536, 655361, 0, 65537, 655362, 0, 65537, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65538, 655381, 1, 0, 655382, 1, 1, 655383, 1, 2, 655384, 0, 0, 655385, 0, 1, 655386, 0, 1, 655387, 0, 1, 655388, 0, 2, 655389, 1, 65536, 655390, 1, 65537, 655391, 1, 65538, 786426, 1, 65536, 786427, 1, 65537, 786428, 1, 65537, 786429, 1, 65537, 786430, 1, 65537, 786431, 1, 65538, 720896, 0, 65536, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65538, 720914, 0, 0, 720915, 0, 1, 720916, 0, 2, 720917, 1, 65536, 720918, 1, 65537, 720919, 1, 65538, 720920, 0, 65536, 720921, 0, 65537, 720922, 0, 65537, 720923, 0, 65537, 720924, 0, 65538, 720925, 1, 65536, 720926, 1, 65537, 720927, 1, 65538, 851962, 1, 131072, 851963, 1, 131073, 851964, 1, 131073, 851965, 1, 131073, 851966, 1, 131073, 851967, 1, 131074, 786432, 0, 131072, 786433, 0, 131073, 786434, 0, 131073, 786435, 0, 131073, 786436, 0, 131073, 786437, 0, 131073, 786438, 0, 131074, 786449, 4, 0, 786450, 0, 131072, 786451, 0, 131073, 786452, 0, 131074, 786453, 1, 131072, 786454, 1, 131073, 786455, 1, 131074, 786456, 0, 131072, 786457, 0, 131073, 786458, 0, 131073, 786459, 0, 131073, 786460, 0, 131074, 786461, 1, 131072, 786462, 1, 131073, 786463, 1, 131074, 851968, 3, 0, 851969, 3, 4, 851970, 3, 5, 851971, 3, 4, 851972, 3, 4, 851973, 3, 2, 851974, 3, 5, 851975, 3, 3, 851976, 3, 5, 851977, 3, 1, 851978, 3, 2, 851979, 3, 1, 851980, 3, 4, 851981, 3, 1, 851982, 3, 3, 851983, 3, 1, 851984, 3, 2, 851985, 3, 2, 851986, 3, 4, 851987, 3, 3, 851988, 3, 2, 851989, 3, 4, 851990, 3, 4, 851991, 3, 6 )

[node name="BG" parent="." instance=ExtResource( 6 )]
z_index = -2
tile_data = PoolIntArray( 65530, 10, 0, 65531, 10, 0, 65532, 10, 0, 65533, 10, 0, 65534, 10, 0, 65535, 10, 0, 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 10, 10, 0, 11, 10, 0, 12, 10, 0, 13, 10, 0, 14, 10, 0, 15, 10, 0, 16, 10, 0, 17, 10, 0, 18, 10, 0, 19, 10, 0, 20, 10, 0, 21, 10, 0, 22, 10, 0, 23, 10, 0, 131066, 10, 0, 131067, 1, 0, 131069, 1, 0, 131071, 1, 0, 65537, 1, 0, 65539, 1, 0, 65541, 1, 0, 65543, 1, 0, 65545, 1, 0, 65547, 1, 0, 65549, 1, 0, 65551, 10, 0, 65552, 10, 0, 65553, 10, 0, 65554, 10, 0, 65555, 10, 0, 65556, 10, 0, 65557, 10, 0, 65558, 10, 0, 65559, 10, 0, 196602, 1, 0, 196604, 1, 0, 196606, 1, 0, 131072, 1, 0, 131074, 1, 0, 131076, 1, 0, 131078, 1, 0, 131080, 1, 0, 131082, 1, 0, 131084, 1, 0, 131086, 1, 0, 131088, 10, 0, 131089, 10, 0, 131090, 10, 0, 131091, 10, 0, 131092, 10, 0, 131093, 10, 0, 131094, 10, 0, 131095, 10, 0, 262138, 10, 0, 262139, 1, 0, 262141, 1, 0, 262143, 1, 0, 196609, 1, 0, 196611, 1, 0, 196613, 1, 0, 196615, 1, 0, 196617, 1, 0, 196619, 1, 0, 196621, 1, 0, 196623, 1, 0, 196625, 1, 0, 196627, 5, 0, 196629, 10, 0, 196630, 10, 0, 196631, 10, 0, 262150, 1, 0, 262151, 10, 0, 262152, 1, 0, 262154, 1, 0, 262156, 1, 0, 262158, 1, 0, 262160, 1, 0, 262162, 1, 0, 262164, 9, 0, 262165, 10, 0, 262166, 10, 0, 262167, 10, 0, 327686, 10, 0, 327687, 1, 0, 327689, 1, 0, 327691, 1, 0, 327693, 1, 0, 327695, 1, 0, 327697, 1, 0, 327699, 1, 0, 327701, 1, 0, 327703, 1, 0, 327705, 1, 0, 327707, 1, 0, 393222, 1, 0, 393223, 10, 0, 393224, 1, 0, 393226, 1, 0, 393228, 1, 0, 393230, 1, 0, 393232, 1, 0, 393234, 1, 0, 393236, 1, 0, 393238, 1, 0, 393240, 1, 0, 393242, 1, 0, 393244, 10, 0, 458758, 10, 0, 458759, 1, 0, 458761, 1, 0, 458763, 1, 0, 458765, 1, 0, 458767, 1, 0, 458769, 1, 0, 458771, 1, 0, 458773, 1, 0, 458775, 1, 0, 458777, 1, 0, 458779, 1, 0, 524294, 1, 0, 524295, 10, 0, 524296, 1, 0, 524298, 1, 0, 524300, 1, 0, 524302, 1, 0, 524304, 1, 0, 524306, 1, 0, 524308, 1, 0, 524310, 1, 0, 524312, 1, 0, 524314, 1, 0, 524316, 10, 0, 589830, 9, 0, 589831, 1, 0, 589833, 1, 0, 589835, 1, 0, 589837, 1, 0, 589839, 1, 0, 589841, 1, 0, 589843, 1, 0, 589845, 1, 0, 589847, 10, 0, 589848, 10, 0, 589849, 1, 0, 589851, 1, 0, 655366, 5, 0, 655367, 9, 0, 655368, 1, 0, 655370, 1, 0, 655372, 1, 0, 655374, 1, 0, 655376, 1, 0, 655378, 1, 0, 655380, 10, 0, 720896, 10, 0, 720902, 9, 0, 720903, 5, 0, 720905, 1, 0, 720907, 1, 0, 720909, 1, 0, 720911, 1, 0, 720913, 10, 0, 720917, 10, 0, 720918, 10, 0, 720919, 10, 0, 720920, 10, 0, 786432, 10, 0, 786437, 10, 0, 786438, 8, 0, 786439, 9, 0, 786440, 5, 0, 786442, 1, 0, 786444, 1, 0, 786446, 1, 0, 786448, 10, 0, 786449, 10, 0, 786450, 10, 0, 786451, 10, 0, 786452, 10, 0, 786453, 10, 0, 786454, 10, 0, 786455, 10, 0, 786456, 10, 0, 786457, 10, 0, 851968, 10, 0, 851973, 10, 0, 851974, 10, 0, 851975, 10, 0, 851985, 10, 0, 851986, 10, 0, 851988, 10, 0, 851989, 10, 0, 851990, 10, 0, 851991, 10, 0, 917504, 10, 0, 917505, 10, 0, 917506, 10, 0, 917507, 10, 0, 917508, 10, 0, 917509, 10, 0, 917510, 10, 0, 917511, 10, 0, 917512, 10, 0, 917513, 10, 0, 917514, 10, 0, 917515, 10, 0, 917516, 10, 0, 917517, 10, 0, 917518, 10, 0, 917519, 10, 0, 917520, 10, 0, 917521, 10, 0, 917522, 10, 0, 917523, 10, 0, 917524, 10, 0, 917525, 10, 0, 917526, 10, 0, 917527, 10, 0 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 311.197
margin_top = 210.871
margin_right = 378.197
margin_bottom = 221.871
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[color=aqua][url=https://github.com/Clon135/Das_Abenteuer/issues]Bug Report[/url][/color]"
text = "Bug Report"
[connection signal="pressed" from="Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Buttons/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="body_entered" from="Bottom" to="." method="_on_Bottom_body_entered"]
[connection signal="body_entered" from="Top" to="." method="_on_Top_body_entered"]
[connection signal="meta_clicked" from="RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
